--- a/ProjectSourceCode/src/views/pages/color_picker.hbs
+++ b/ProjectSourceCode/src/views/pages/color_picker.hbs
@@ -1,4 +1,6 @@
-<canvas id="color_preview" width="200px" height="200px"></canvas>
+<canvas id="color_preview" width="200px" height="50"></canvas>
+<br>
+<canvas id="sv_slider" width="200px" height="200px"></canvas>
 <br>
 <canvas id="hue_slider" width="200px" height="20px"></canvas>
 <script type="module" src="/static/color_picker.js"></script>
