rough draft canvas

--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -20,6 +20,9 @@
       <div class="navbar-collapse collapse w-50 order-md-5 dual-collapse2">
           <ul class="navbar-nav ms-auto">
               <li class="nav-item">
+                  <a class="nav-link" href="/pixel-art">Pixel Canvas</a>
+              </li>
+              <li class="nav-item">
                   <a class="nav-link" href="/logout">Logout</a>
               </li>
           </ul>
