Changed password input to be blured and changed message(alert) to be red instead of green

--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -5,7 +5,7 @@
         <label for="username">Username</label>
         <input type="text" name = "username" class="form-control" id="username" aria-describedby="username">
         <label for="password">Password</label>
-        <input type="text" name = "password" class="form-control" id="password" aria-describedby="password">
+        <input type="password" name = "password" class="form-control" id="password" aria-describedby="password">
         <input type="submit" class="btn btn-primary mt-3" name="Login">
     </div>
     <div>
