--- a/ProjectSourceCode/src/views/pages/color_picker.hbs
+++ b/ProjectSourceCode/src/views/pages/color_picker.hbs
@@ -3,4 +3,4 @@
 <canvas id="sv_slider" width="200px" height="200px"></canvas>
 <br>
 <canvas id="hue_slider" width="200px" height="20px"></canvas>
-<script type="module" src="/static/color_picker.js"></script>
+<script type="module" src="/js/color_picker.js"></script>
