--- a/ProjectSourceCode/src/views/partials/color_picker.hbs
+++ b/ProjectSourceCode/src/views/partials/color_picker.hbs
@@ -1,6 +1,7 @@
-<canvas id="color_preview" width="200px" height="50"></canvas>
-<br>
-<canvas id="sv_slider" width="200px" height="200px"></canvas>
-<br>
-<canvas id="hue_slider" width="200px" height="20px"></canvas>
-<script type="module" src="/js/color_picker.js"></script>
+<div class="d-flex flex-column align-items-end">
+  <canvas id="color_preview" class="pb-2" width="200px" height="50px"></canvas>
+  <canvas id="sv_slider" width="200px" height="200px"></canvas>
+  <canvas id="hue_slider" width="200px" height="20px"></canvas>
+
+  <script type="module" src="/js/color_picker.js"></script>
+</div>
