--- a/ProjectSourceCode/src/public/css/pixel-canvas.css
+++ b/ProjectSourceCode/src/public/css/pixel-canvas.css
@@ -35,3 +35,11 @@ button:hover {
     cursor: pointer;
     transition: background-color 0.1s;
 }
+
+.palette {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  cursor: pointer;
+  transition: background-color 0.1;
+}
