--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -21,7 +21,8 @@
   <div class="row">
 
     <div class="col">
-      {{> color_picker}}
+      {{> palette width=200 rows=paletteRows}}
+      {{> color_picker width=200}}
     </div>
 
     <div class="col">
@@ -32,6 +33,8 @@
 
   </div>
 
+  <script type="module" src="/js/palette.js"></script>
   <script type="module" src="/js/pixel-canvas.js"></script>
   <link rel="stylesheet" href="/css/pixel-canvas.css">
+
 </div>
