add pathways working

--- a/ProjectSourceCode/src/views/pages/homeCanvas.hbs
+++ b/ProjectSourceCode/src/views/pages/homeCanvas.hbs
@@ -1,4 +1,7 @@
 {{>message}}
 <div class="container">
-  <p> The Blank Canvas </p>
+  <p> Home Screen </p>
+  <li class="nav-item">
+    <a class="nav-link btne" href="/pixel-art">Canvas</a>
+  </li>
 </div>
