--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -7,9 +7,9 @@
       <div class="d-flex flex-column align-items-center">
         <h1>Pixel Art Creator</h1>
 
-        <div class="controls">
+        <div class="d-flex align-items-center gap-3 pb-2">
           <button id="clear-btn">Clear Canvas</button>
-          <button id="save-btn">Save Art</button>
+          <button id="save-btn" type="submit">Save Art</button>
         </div>
       </div>
     </div>
@@ -25,6 +25,9 @@
     </div>
 
     <div class="col">
+      <form class="pb-2">
+        <input id="artwork_name" placeholder="Name"> 
+      </form>
       {{> pixel-canvas rows=canvasRows}}
     </div>
 
@@ -32,6 +35,7 @@
 
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="/js/pixel-canvas.js"></script>
   <link rel="stylesheet" href="/css/pixel-canvas.css">
 </div>
