Have page get and display user's saved artwork

--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -20,7 +20,7 @@
       <div class="navbar-collapse collapse w-50 order-md-5 dual-collapse2">
           <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                  <a class="nav-link" href="/pixel-art">Pixel Canvas</a>
+                  <a class="nav-link" href="/private_gallery">My Artwork</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="/logout">Logout</a>
