--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -25,6 +25,13 @@
     </div>
 
     <div class="col">
+      <form class="pb-2">
+        {{#if saved_canvas}}
+          <input id="artwork_name" placeholder="Name" value="{{artwork_name}}"> 
+        {{else}}
+          <input id="artwork_name" placeholder="Name"> 
+        {{/if}}
+      </form>
       {{> pixel-canvas rows=canvasRows}}
     </div>
 
@@ -32,6 +39,7 @@
 
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="/js/pixel-canvas.js"></script>
   <link rel="stylesheet" href="/css/pixel-canvas.css">
 </div>
