--- a/ProjectSourceCode/src/views/pages/private_gallery.hbs
+++ b/ProjectSourceCode/src/views/pages/private_gallery.hbs
@@ -1,6 +1,13 @@
 {{> message}}
 
+
 <div class="container text-center">
+  <div class="row pb-2">
+    <form action="/load_canvas" method="POST">
+      <input name="new_canvas" type="hidden" value="new_canvas">
+      <button type="submit">New Canvas</button>
+    </form>
+  </div>
   {{#each artworks}}
     <div class="row">
       {{#each this}}
@@ -8,7 +15,10 @@
 
           <div class="card">
             <div class="card-body">
-              <a class="card-title" href="/pixel-art">{{this.artwork_name}}</a>
+              <form action="/load_canvas" method="POST">
+                <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
+                <button type="submit" class="artwork-link">{{this.artwork_name}}</button>
+              </form>
             </div>
           </div>
 
@@ -17,4 +27,5 @@
     </div>
     <br>
   {{/each}}
+  <link rel="stylesheet" href="/css/pixel-canvas.css">
 </div>
