navigation and syle of navbar done

--- a/ProjectSourceCode/src/public/css/pixel-canvas.css
+++ b/ProjectSourceCode/src/public/css/pixel-canvas.css
@@ -35,3 +35,11 @@ button:hover {
     cursor: pointer;
     transition: background-color 0.1s;
 }
+
+@font-face {
+    font-family: 'Press Start 2P';
+    src: url('/css/PressStart2P-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  
