--- a/ProjectSourceCode/src/views/pages/homeCanvas.hbs
+++ b/ProjectSourceCode/src/views/pages/homeCanvas.hbs
@@ -2,6 +2,6 @@
 <div class="container">
   <p> Home Screen </p>
   <li class="nav-item">
-    <a class="nav-link btne" href="/pixel-art">Canvas</a>
+    <a class="button" href="/pixel-art">Canvas</a>
   </li>
 </div>
