--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -1,5 +1,12 @@
 <header>
+   <link rel="stylesheet" href="/css/pixel-canvas.css">
    <style>
+    .navbar, .nav-link {
+      font-family: 'Press Start 2P', sans-serif !important;
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+
     #roomArea {
       display: flex;
       align-items: center;
@@ -16,7 +23,6 @@
     .dropdown-menu {
       min-width: 10rem;
     }
-    
    </style>
    <div id="header">
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2A2A2A;">
@@ -36,7 +42,7 @@
           <!-- Room Join Form -->
           <form method="post" action="/canvas" class="form-inline" id="roomForm">
             <div class="form-group" id="roomArea">
-              <label for="roomInput" class="form-label">Join Canvas:</label>
+              <label for="roomInput" class="form-label" style="color: rgb(255, 255, 255)">Join Canvas:</label>
               <input type="text" name="roomInput" class="form-control form-control-sm" placeholder="#..." id="roomInput">
               <input type="submit" class="btn btn-primary btn-sm" value="Join">
             </div>
