Added functionality such as live updates, auto save, manual save

--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -1,9 +1,7 @@
 <div class="container">
-  <style>
-    <div>
-      font-family: 'Press Start 2P';font-size: 22px;
-    </div>
-  </style>
+  <div>
+    <label for="roomInput" class="form-label">Exclusive_Canvas: {{canvasNumber}}</label>
+  </div>
   <div class="row">
 
     <div class="col"></div>
@@ -12,7 +10,9 @@
       <div class="d-flex flex-column align-items-center">
 
         <form class="pb-2">
-        <input id="artwork_name" placeholder="Untitled Artwork" width="400px"> 
+        {{!-- {{ The following input has a script that prevents the enter button(keyCode = 13) from being pressed }} --}}
+
+        <input name="artworkName" placeholder="Untitled Artwork" onkeydown="if(event.keyCode === 13) {event.preventDefault()}">
         </form>
 
         <div class="d-flex align-items-center gap-3 pb-2">
