--- a/ProjectSourceCode/src/views/partials/head.hbs
+++ b/ProjectSourceCode/src/views/partials/head.hbs
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <!-- Added Favicon which is the tiny picture in tab -->
-  <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/asset.plexuss.com/college/logos/University_of_Colorado_Denver.png"/>
-  <title>WebSocket-Lite</title>
+  <link rel="shortcut icon" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fkottke.org%2Fplus%2Fmisc%2Fimages%2Fhistory-pixel.jpg&f=1&nofb=1&ipt=252420e62be4a751caf34b0726d6895da99483bbfd51a3bf27e876a29762c2f5"/>
+  <title>Pixels</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body class="h-100 d-flex flex-column">
