Updating test cases

--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -1,7 +1,10 @@
 <div class="container">
+  {{#if canvasNumber}}
   <div>
     <label for="roomInput" class="form-label">Exclusive_Canvas: {{canvasNumber}}</label>
   </div>
+  {{/if}}
+  
   <div class="row">
 
     <div class="col"></div>
