--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -41,5 +41,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="/js/pixel-canvas.js"></script>
-  <link rel="stylesheet" href="/css/pixel-canvas.css">
+  <link rel="stylesheet" href="./css/style.css">
 </div>
