--- a/ProjectSourceCode/src/views/pages/privateCanvas.hbs
+++ b/ProjectSourceCode/src/views/pages/privateCanvas.hbs
@@ -1,3 +1,6 @@
+
+<link rel="stylesheet" href="./css/style.css">
+
 <body>
     {{#if canvasNumber}}
     <div>
@@ -8,5 +11,5 @@
     <form id="chatForm" action="">
         <input id="chatInput" autocomplete="off" /><button>Send</button>
     </form>
-    <div id = "messageSpot"></div>
+    <div id="messageSpot"></div>
 </body>
