--- a/ProjectSourceCode/src/views/pages/logout.hbs
+++ b/ProjectSourceCode/src/views/pages/logout.hbs
@@ -1,4 +1,4 @@
-
+<link rel="stylesheet" href="./css/style.css">
 <header>
     <h3 class="text-center fw-lighter">You have been logged out.</h3>
     <h3 class="text-center fw-lighter">See you next time, {{username}}</h3>
