--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -1,6 +1,5 @@
 {{> message}}
 
-
 <div class="container text-center">
   <div class="row pb-2">
     <form action="/load_canvas" method="POST">
@@ -28,5 +27,5 @@
     </div>
     <br>
   {{/each}}
-  <link rel="stylesheet" href="/css/pixel-canvas.css">
+  <link rel="stylesheet" href="./css/style.css">
 </div>
