--- a/ProjectSourceCode/src/public/css/style.css
+++ b/ProjectSourceCode/src/public/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #222;
     color: #fff;
-    font-family: Arial, sans-serif;
+    font-family: 'Press Start 2P', sans-serif;
     margin: 0;
     padding: 20px;
   }
