--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -1,6 +1,5 @@
 {{> message}}
 
-
 <div class="container text-center">
   <div class="row pb-2">
     <form action="/load_canvas" method="POST">
@@ -15,9 +14,6 @@
 
           <div class="card">
             <div class="card-body">
-              <img src="{{this.thumbnail}}">
-            </div>
-            <div class="card-title">
               <form action="/load_canvas" method="POST">
                 <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
                 <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
@@ -31,5 +27,5 @@
     </div>
     <br>
   {{/each}}
-  <link rel="stylesheet" href="/css/pixel-canvas.css">
+  <link rel="stylesheet" href="./css/style.css">
 </div>
