--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -1,7 +1,7 @@
 <div class="container">
   {{#if canvasNumber}}
   <div>
-    <label for="roomInput" class="form-label">Exclusive_Canvas: {{canvasNumber}}</label>
+    <label for="roomInput" class="form-label">Canvas: {{canvasNumber}}</label>
   </div>
   {{/if}}
   
@@ -55,6 +55,6 @@
   <script type="module" src="/js/palette.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="/js/pixel-canvas.js"></script>
-  <link rel="stylesheet" href="/css/pixel-canvas.css">
+  <link rel="stylesheet" href="/css/style.css">
 
 </div>
