--- a/ProjectSourceCode/src/public/css/pixel-canvas.css
+++ b/ProjectSourceCode/src/public/css/pixel-canvas.css
@@ -2,10 +2,18 @@
     margin-bottom: 20px;
 }
 
-button {
+body {
+    background-color: #222;
+    color: #fff;
+    font-family: 'Press Start 2P', sans-serif;
+    margin: 0;
+    padding: 20px;
+  }
+  
+  button {
     padding: 8px 16px;
     margin: 0 5px;
-    background-color: #4CAF50;
+    background-color: #5822d4;
     color: rgb(255, 255, 255);
     border: none;
     border-radius: 4px;
@@ -13,7 +21,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #9071d8;
 }
 
 .artwork-link {
@@ -50,13 +58,26 @@ button:hover {
     transition: background-color 0.1s;
 }
 
-.palette {
+.palette-container {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+  }
+  
+  .palette-row {
+    display: flex;
+    flex-direction: row;
+  }
+  
+  .palette {
     width: 40px;
     height: 40px;
     background-color: white;
     cursor: pointer;
-    transition: background-color 0.1;
-}
+    transition: background-color 0.1s;
+    margin: 1px;
+    border: 1px solid #ccc;
+  }
 
 @font-face {
     font-family: 'Press Start 2P';
