--- a/ProjectSourceCode/src/views/partials/palette.hbs
+++ b/ProjectSourceCode/src/views/partials/palette.hbs
@@ -1,6 +1,6 @@
-<div class="d-flex flex-column align-items-end">
+<div class="palette-container">
   {{#each rows}}
-    <div class="pixel-row">
+    <div class="palette-row">
       {{#each this}}
         <div class="palette" data-row="{{@../index}}" data-col="{{@index}}"></div>
       {{/each}}
@@ -10,7 +10,6 @@
   <div class="pb-2"></div>
 
   <div class="row">
-
     <div class="col">
       <button id="palette_add" type="submit" for="palette_add">+</button>
     </div>
@@ -18,10 +17,8 @@
     <div class="col">
       <button id="palette_clear">Clear</button>
     </div>
-
   </div>
 
   <div class="pb-2"></div>
   <script type="module" src="/js/palette.js"></script>
 </div>
-
