--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -14,7 +14,7 @@
 
           <div class="card">
             <div class="card-body">
-              <form action="/load_canvas" method="POST">
+              <form action="/load_canvas" method="GET">
                 <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
                 <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
                 <button type="submit" class="artwork-link">{{this.artwork_name}}</button>
