--- a/ProjectSourceCode/src/public/css/pixel-canvas.css
+++ b/ProjectSourceCode/src/public/css/pixel-canvas.css
@@ -61,22 +61,24 @@ button:hover {
 .palette-container {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: center;
+    margin-bottom: 10px;
   }
   
   .palette-row {
     display: flex;
     flex-direction: row;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   
   .palette {
-    width: 40px;
-    height: 40px;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #ddd;
     background-color: white;
     cursor: pointer;
     transition: background-color 0.1s;
-    margin: 1px;
-    border: 1px solid #ccc;
   }
 
 @font-face {
