--- a/ProjectSourceCode/src/views/partials/palette.hbs
+++ b/ProjectSourceCode/src/views/partials/palette.hbs
@@ -9,7 +9,7 @@
 
   <div class="pb-2"></div>
 
-  <div class="row">
+  <div class="d-flex justify-content-center">
     <div class="col">
       <button id="palette_add" type="submit" for="palette_add">+</button>
     </div>
@@ -21,4 +21,3 @@
 
   <div class="pb-2"></div>
   <script type="module" src="/js/palette.js"></script>
-</div>
