--- a/ProjectSourceCode/src/views/partials/palette.hbs
+++ b/ProjectSourceCode/src/views/partials/palette.hbs
@@ -2,7 +2,7 @@
   {{#each rows}}
     <div class="palette-row">
       {{#each this}}
-        <div class="palette" data-row="{{@../index}}" data-col="{{@index}}"></div>
+        <div class="palette" data-row="{{@../index}}" data-col="{{@../index}}"></div>
       {{/each}}
     </div>
   {{/each}}
