--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -11,17 +11,16 @@
     <div class="row">
       {{#each this}}
         <div class="col-4">
-
-          <div class="card">
+          <div class="card" style="width: 18rem;">
+            <img class="card-img-top" src="{{this.thumbnail}}" alt="Card image cap">
             <div class="card-body">
               <form action="/load_canvas" method="POST">
-                <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
-                <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
-                <button type="submit" class="artwork-link">{{this.artwork_name}}</button>
+                  <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
+                  <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
+                  <button type="submit" class="artwork-link">{{this.artwork_name}}</button>
               </form>
             </div>
           </div>
-
         </div>
       {{/each}}
     </div>
