--- a/ProjectSourceCode/src/views/pages/homeCanvas.hbs
+++ b/ProjectSourceCode/src/views/pages/homeCanvas.hbs
@@ -36,4 +36,8 @@
     <input name="private_gallery" type="hidden" value="private_gallery">
     <button class="large-button" type="submit">My Artwork</button>
   </form>
+
+  <form action="/public_gallery" method="GET">
+    <button class="large-button" type="submit">Public Gallery</button>
+  </form>
 </div>
