--- a/ProjectSourceCode/src/views/pages/globalGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/globalGallery.hbs
@@ -1,4 +1,14 @@
-{{>message}}
+
 <div class="container">
-  <p> Global Gallery </p>
+  <h1>Global Gallery</h1>
+  <div class="row">
+    {{#each artworks}}
+      <div class="col-md-4 mb-4 text-center">
+        <div class="card shadow p-3 rounded">
+          <h5 class="mt-2">{{this.artwork_name}}</h5>
+          <p class="text-muted">by: {{this.username}}</p>
+        </div>
+      </div>
+    {{/each}}
+  </div>
 </div>
