--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="container" >
+
   {{#if canvasNumber}}
   <div>
     <label for="roomInput" class="form-label">Canvas: {{canvasNumber}}</label>
@@ -21,6 +22,8 @@
         <div class="d-flex align-items-center gap-3 pb-2">
           <button id="clear-btn">Clear Canvas</button>
           <button id="save-btn" type="submit">Save Art</button>
+          <button id="upload-btn" type="button">Upload</button>
+
         </div>
       </div>
     </div>
