Major bug fixed, This is ready for presentation

--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -17,7 +17,7 @@
               <form action="/load_canvas" method="POST">
                   <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
                   <input name="artwork_name" type="hidden" value="{{this.artwork_name}}">
-                  <button type="submit" class="artwork-link">{{this.artwork_name}}</button>
+                  <button type="submit" class="artwork-link" style="color: black;">{{this.artwork_name}}</button>
               </form>
             </div>
           </div>
