--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -30,7 +30,7 @@
       <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #2A2A2A;">
         <!-- Left Side - Brand Name -->
         <a href="/homeCanvas" class="navbar-brand">
-          <span class="brand-name">PIXELART</span>
+          <span class="brand-name">PIXELS</span>
         </a>
         
         <!-- Center Content -->
