Minor U.I. fixes to VersionTwo

--- a/ProjectSourceCode/src/views/pages/pixel-art.hbs
+++ b/ProjectSourceCode/src/views/pages/pixel-art.hbs
@@ -53,7 +53,7 @@
       {{> color_picker width=200}}
     </div>
 
-    <div class="col">
+    <div class="col-md-auto" >
       {{> pixel-canvas rows=canvasRows}}
     </div>
 
