--- a/ProjectSourceCode/src/views/partials/nav.hbs
+++ b/ProjectSourceCode/src/views/partials/nav.hbs
@@ -34,7 +34,7 @@
         </a>
         
         <!-- Center Content -->
-        <div class="navbar-collapse collapse order-md-1">
+        <div class="navbar-collapse order-md-1">
           <ul class="navbar-nav me-auto">
             {{!-- <li class="nav-item">
               <a class="nav-link btn btn-outline-light border-white" href="/globalGallery" style="color: rgb(255, 255, 255);">Global Gallery</a>
@@ -53,7 +53,7 @@
         
         <!-- Right Side - Dropdown Menu -->
         {{#if username}}
-        <div class="navbar-collapse collapse order-md-2">
+        <div class="navbar-collapse order-md-2">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
@@ -67,7 +67,7 @@
           </ul>
         </div>
         {{else}}
-         <div class="navbar-collapse collapse order-md-2">
+         <div class="navbar-collapse order-md-2">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white;">
