--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -10,7 +10,7 @@
   {{#each artworks}}
     <div class="row">
       {{#each this}}
-        <div class="col-4">
+        <div class="col-md-auto">
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="{{this.thumbnail}}" alt="Card image cap">
             <div class="card-body">
