--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -12,7 +12,7 @@
       {{#each this}}
         <div class="col align-items-center">
           <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="{{this.thumbnail}}" alt="Card image cap">
+            <img class="card-img-top" src="{{this.thumbnail}}" alt="Thumbnail">
             <div class="card-body">
               <form action="/load_canvas" method="POST">
                   <input name="artwork_id" type="hidden" value="{{this.artwork_id}}">
