--- a/ProjectSourceCode/src/views/pages/privateGallery.hbs
+++ b/ProjectSourceCode/src/views/pages/privateGallery.hbs
@@ -7,10 +7,10 @@
       <button type="submit">New Canvas</button>
     </form>
   </div>
+  <div class="grid-container">
   {{#each artworks}}
-    <div class="row">
       {{#each this}}
-        <div class="col align-items-center">
+        <div class="grid-item">
           <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="{{this.thumbnail}}" alt="Thumbnail">
             <div class="card-body">
@@ -23,8 +23,7 @@
           </div>
         </div>
       {{/each}}
-    </div>
-    <br>
   {{/each}}
+  </div>
   <link rel="stylesheet" href="./css/style.css">
 </div>
